--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster');
 
 :root {
-        --primary-color: black; 
+        --primary-color: black;
         
 }
 
@@ -9,7 +9,6 @@
 input[type="reset"],[type="submit"]:focus {
         outline:none;
 }
-
 input:focus {
         outline-color:#1c9c1c;
 }
@@ -25,14 +24,17 @@ textarea:focus {
         margin:0;
         padding:0;
 }
+
 body {
+        
         max-width: 980px;
         min-width: 320px;
         margin:auto;
-        
 }
 
-   /*хедер*/ 
+ 
+ 
+   /*хедер*/
 
 header #language {
         text-align: right;
@@ -40,7 +42,6 @@ header #language {
         padding-right: 10px;
         margin-bottom: 20px;
 }
-
 header #language a {
         margin-right: 5px;
         text-decoration: none;
@@ -49,26 +50,22 @@ header #language a {
 header #language a:hover {
         color:green;
 }
-
 header .main_logo h1  {
         font-size: 38px;
         text-align: center;
         margin-top: 15px;
         margin-bottom: 0;
-        
 }
 header .main_logo h1 a {
         text-decoration: none;
         color: black;
 }
-
 header .main_logo h2 {
         font-size:25px;
         text-align: center;
         margin-bottom: 30px;
         margin-top:-5px;
 }
-
 header .main_menu .main_menu_list {
         display: flex;
         list-style-type: none;
@@ -76,18 +73,26 @@ header .main_menu .main_menu_list {
         margin-bottom: 30px;
         margin-left: 10px;
         margin-right: 10px;
-        
 }
 header .main_menu .main_menu_list li a{
         text-decoration: none;
         color: var(--primary-color)
-        
 }
 header .main_menu .main_menu_list li a:hover {
         color: green;
 }
 
+
+
+
+
+
+
 /*спільне для всіх сайтів*/
+
+
+
+
 
 
 
@@ -100,6 +105,7 @@ header .main_menu .main_menu_list li a:hover {
 
 main #slide_menu img {
         display: none;
+        
 }
 main .textatcenter {
         text-align: center;
@@ -132,6 +138,8 @@ hr {
         margin-top: -15px;
         margin-bottom: 30px;
 }
+
+
  /*лінії на сайті*/
 
 .hline {
@@ -140,20 +148,6 @@ hr {
 .hline_footer {
         display: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -172,10 +166,11 @@ main .conect #conectus {
 main .conect #conectus label {
         align-items:center;
         text-align: center;
-        font-size: 18px;
+        
         
 }
-main .conect #conectus label p {
+main .conect #conectus label span {
+        display: block;
         margin-bottom: -15px;
         margin-top: -10px;
 }
@@ -188,7 +183,6 @@ main .conect #conectus label input {
         border-color: green;
         
 }
-
 main .conect #conectus textarea {
         margin-top: 25px;
         width: 200px;
@@ -214,12 +208,9 @@ main .conect #conectus .conectus_button input {
         border-color:green;
         padding:5px;
 }
-
-
 main .conect #conectus .conectus_button input:hover {
         color:white;
         background-color: green;
-      
 }
 
      /*форма*/
@@ -250,21 +241,19 @@ footer p {
         align-items:center;
 }
 
-#partnership .send_message_area #work_form .your_phone p {
+#partnership .send_message_area #work_form .your_phone span {
+        display: block;
         text-align: center;
 }
 #partnership .send_message_area #work_form div {
         margin-bottom: 0px;
-        
-
-
 }
-#partnership .send_message_area #work_form label p {
+#partnership .send_message_area #work_form label span {
+        display: block;
         text-align: center;
         margin-bottom: -15px;
         margin-top: -10px;
         font-size: 18px;
-        
 }
 #partnership .send_message_area #work_form label input {
         width:200px;
@@ -275,30 +264,20 @@ footer p {
         border-color: green;
         margin: 0px;
 }
-
 #partnership .send_message_area #work_form .radio_question  {
         width: 200px;
         text-align: center;
         display: flex;
         align-items:center;
-
+        font-size: 18px;
 }
-
-        
-#partnership .send_message_area #work_form .radio_question label p{
+#partnership .send_message_area #work_form .radio_question label span {
         padding-bottom: 13px;
-     
-       
-        
-        
         
 }
 #partnership .send_message_area #work_form .radio_question label input {
         width: 40px;
-        
-        
 }
-
 #partnership .send_message_area #work_form .conectus_button {
         width: 200px;
         text-align: center;
@@ -319,6 +298,12 @@ footer p {
 
 
 
+
+
+
+
+
+
 /*apartamentspages*/
 
 #apartaments .apart_block {
@@ -334,7 +319,6 @@ footer p {
         border-color: green;
         border-width: 0.5px;
         border-style: solid;
-        
 }
 #apartaments .apart_block input:hover {
         color:white;
@@ -351,11 +335,10 @@ footer p {
 
 
 
-
-
-
-
 /*змінні параметри */
+
+
+
 @media (min-width: 450px) {
         header .main_logo h1 {
                 font-size:55px;
@@ -366,6 +349,8 @@ footer p {
         header .main_menu .main_menu_list li a {
                 font-size: 20px;
         }
+        
+        
         main .contact_area .contacts  {
         display: flex;
         justify-content:center;
@@ -379,8 +364,9 @@ footer p {
         width:300px;
         height: 35px;
         }
-        main .conect #conectus label p {
-        font-size:20px;
+        main .conect #conectus label span {
+                display: block;
+                font-size: 20px;
         
         }
         input[placeholder] {
@@ -402,7 +388,8 @@ footer p {
         
         
         /*contactspages*/
-        #partnership .send_message_area #work_form label p {
+        #partnership .send_message_area #work_form label span {
+                display: block;
                 font-size: 20px;
         }
         #partnership .send_message_area #work_form label input {
@@ -419,8 +406,6 @@ footer p {
                 width: 300px;
         }
         
-        
-
 }
 
 
@@ -478,7 +463,8 @@ footer p {
         width:400px;
         height: 50px;
         }
-        main .conect #conectus label p {
+        main .conect #conectus label span {
+                display: block;
         font-size:25px;
         
         }
@@ -495,7 +481,8 @@ footer p {
         main .phonenumber p {
                 font-size: 20px;
         }
-        #partnership .send_message_area #work_form label p {
+        #partnership .send_message_area #work_form label span {
+                display: block;
                 font-size: 25px;
         }
         #partnership .send_message_area #work_form label input {
@@ -518,12 +505,28 @@ footer p {
         }
         footer {
                 min-height: 50px;
+             
         }
         footer p {
-                display: block;
+                display: flex;
                 font-size: 15px;
-                text-align: right;
+                align-items:center;
+                flex-direction:row;
                 margin:10px 0px 10px 0px;
         }
+        body footer .date_time  {
+                width: 50%;
+        }
+        body footer .date_time .clock {
+                margin-right:10px;
+                width: 60px;
+        }
         
+        body footer p {
+                width: 50%;
+        }
+       
+
+
 }
+
